--- a/stylev2.css
+++ b/stylev2.css
@@ -23,7 +23,7 @@ h1 {
 .txt {
     text-transform: uppercase;
     opacity: 0.7;
-    margin-left: 55px;
+    margin-left: 70px;
     padding-top: 10px;
     font-size: 15pt;
 }
@@ -49,4 +49,23 @@ h1 {
 button, input {
     outline: none;
     padding: 3px 4px;
+}
+
+button {
+    background: #f7f7f7;
+    cursor: pointer;
+    border: 0;
+    font-family: "Segoe UI Light";
+    text-transform: uppercase;
+    height: 40px;
+    width: 100px;
+    font-size: 15pt
+}
+
+.submit {
+    background: #f7f7f7;
+    font-family: "Segoe UI Light";
+    font-size: 15pt;
+    width: 400px;
+    border: 0;
 }
