--- a/stylev2.css
+++ b/stylev2.css
@@ -34,13 +34,13 @@ h1 {
     opacity: 0.7;
 }
 
-#select a {
+a {
     color: #12bcdb;
     text-decoration: none;
     word-spacing: 18pt;
 }
 
-#select a:hover {
+a:hover {
     color: #10cff2
 }
 
