Fix a bug in eab7d870
Yeah, you might have noticed that I didn't studied accurately CSS

--- a/stylev2.css
+++ b/stylev2.css
@@ -84,9 +84,9 @@ button {
     font-size: 15pt;
     border: 0;
 }
-.submit .api {
+.api {
     width: 400px;
 }
-.submit .cl {
+.cl {
     width: 100px;
 }
